--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -181,6 +181,7 @@ dependencies {
   implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
   implementation "net.danlew:android.joda:$jodaTimeVersion"
   implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+  implementation 'com.google.android:flexbox:1.0.0'
 
 
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
