--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -60,6 +60,8 @@ dependencies {
   implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
   implementation "me.jessyan:retrofit-url-manager:$urlManager"
   implementation "com.jakewharton.timber:timber:$timberVersion"
+  implementation "com.github.nisrulz:easydeviceinfo-base:2.4.1"
+  implementation "com.github.nisrulz:easydeviceinfo-common:2.4.1"
 
   testImplementation "junit:junit:$junitVersion"
   testImplementation "org.assertj:assertj-core:$assertjVersion"
