--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -182,6 +182,7 @@ dependencies {
   implementation "net.danlew:android.joda:$jodaTimeVersion"
   implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
   implementation 'com.google.android:flexbox:1.0.0'
+  implementation 'com.henryblue.library:tvrecyclerview:1.1.3'
 
 
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
