--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -184,7 +184,7 @@ dependencies {
   implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
   implementation 'com.google.android:flexbox:1.0.0'
   implementation 'com.henryblue.library:tvrecyclerview:1.1.4'
-
+  implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
 
   // https://mvnrepository.com/artifact/org.simpleframework/simple-xml
   implementation("org.simpleframework:simple-xml:$simpleXmlVersion") {
