--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -42,7 +42,7 @@ android {
 }
 
 dependencies {
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 
   implementation project(':serenity-common')
@@ -78,5 +78,5 @@ dependencies {
 }
 
 sourceCompatibility = "1.8"
-targetCompatibility = "1.8"
+targetCompatibility = "1.7"
 
