--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -63,7 +63,7 @@ dependencies {
   implementation project(':serenity-common')
   implementation "com.squareup.dagger:dagger:$daggerVersion"
   implementation "org.greenrobot:eventbus:$eventBus"
-  implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
 
   implementation "com.birbit:android-priority-jobqueue:$androidPriorityJobQueueVersion"
