Upgrade to Robolectric 4.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ org.gradle.jvmargs=-Xms256m -Xmx512m -XX:+UseStringDeduplication
 kotlin.incremental=true
 android.enableD8=true
 org.gradle.configureondemand=false
+android.enableUnitTestBinaryResources=true
