--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ android:
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
     - build-tools-28.0.2
+    - android-27
     - android-28
     - extra-android-m2repository
     - extra-google-m2repository
