--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ buildscript {
     google()
   }
   dependencies {
+    classpath 'com.google.gms:google-services:4.0.1'
     classpath 'com.android.tools.build:gradle:3.1.4'
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
