Issue #382 Migrate from Dagger 1 to Toothpick

--- a/build.gradle
+++ b/build.gradle
@@ -71,4 +71,5 @@ project.ext {
   assertJAndroidVersion = "1.1.1"
   commonsioVersion = "2.6"
   jacocoVersion = "0.8.2"
+  toothPickVersion = "1.1.1"
 }
