--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -63,6 +63,14 @@ android {
     minSdkVersion 21
     targetSdkVersion 28
     multiDexEnabled true
+    multiDexKeepProguard file("multidex_keep_file.txt")
+
+//    javaCompileOptions {
+//      annotationProcessorOptions {
+//        arguments = [ toothpick_registry_package_name : "us.nineworlds.serenity",
+//                      toothpick_registry_children_package_names : "us.nineworlds.serenity.emby"]
+//      }
+//    }
 
   }
 
@@ -199,12 +207,23 @@ dependencies {
   implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
   implementation "me.jessyan:retrofit-url-manager:$urlManager"
   implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttpVersion"
-  implementation "com.squareup.dagger:dagger:$daggerVersion"
   implementation "com.github.vganin:dpadaware-recyclerview:$dpadAwareVersion"
   implementation "com.jakewharton:butterknife:$butterKnifeVersion"
   implementation "com.jakewharton.timber:timber:$timberVersion"
   implementation "com.android.support:cardview-v7:$androidSupportLibVersion"
   implementation "com.android.support:support-annotations:$androidSupportLibVersion"
+
+  releaseImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion") {
+    exclude group: 'javax.inject'
+  }
+  releaseImplementation("com.github.stephanenicolas.toothpick:smoothie:$toothPickVersion") {
+    exclude group: 'javax.inject'
+  }
+
+  debugImplementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion")
+
+  releaseImplementation "com.github.stephanenicolas.toothpick:toothpick-javax-annotations:$toothPickVersion"
+  kapt "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothPickVersion"
 
   implementation "com.squareup.moshi:moshi-kotlin:$moshiKotlinVersion"
   implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
@@ -243,11 +262,11 @@ dependencies {
 
   testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
   testImplementation "commons-io:commons-io:$commonsioVersion"
+  testImplementation "com.github.stephanenicolas.toothpick:toothpick-testing:$toothPickVersion"
+  kaptTest "com.github.stephanenicolas.toothpick:toothpick-compiler:$toothPickVersion"
 
   kapt "com.arello-mobile:moxy-compiler:$moxyVersion"
-  kapt "com.squareup.dagger:dagger-compiler:$daggerVersion"
   kapt "com.jakewharton:butterknife-compiler:$butterKnifeVersion"
-  kaptTest "com.squareup.dagger:dagger-compiler:$daggerVersion"
 }
 
 com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
