--- a/serenity-common/build.gradle
+++ b/serenity-common/build.gradle
@@ -23,13 +23,15 @@ apply plugin: 'kotlin-kapt'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-
-    implementation "com.squareup.dagger:dagger:$daggerVersion"
-    kapt "com.squareup.dagger:dagger-compiler:$daggerVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
 
     implementation "com.squareup.okhttp3:okhttp:$okhttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
+
+    implementation("com.github.stephanenicolas.toothpick:toothpick-runtime:$toothPickVersion") {
+        exclude group: 'javax.inject'
+    }
+
 }
 
 sourceCompatibility = "1.8"
