Test Performance cleanup.  Don't do anything with SQLLite Databases

--- a/serenity-app/src/test/resources/us/nineworlds/serenity/robolectric.properties
+++ b/serenity-app/src/test/resources/us/nineworlds/serenity/robolectric.properties
@@ -1,2 +1,4 @@
 sdk=28
 qualifiers=large
+shadows=us.nineworlds.serenity.test.shadows.DoNothingShadowSQLiteConnection
+application = us.nineworlds.serenity.TestSerenityApplication
