--- a/plexapp-rest-library/build.gradle
+++ b/plexapp-rest-library/build.gradle
@@ -84,7 +84,7 @@ test {
 }
 
 jacoco {
-  toolVersion = "0.7.6.201602180812"
+  toolVersion = "0.8.2"
   reportsDir = file("$buildDir/jacoco-report")
 }
 
