--- a/serenity-app/codecov.yml
+++ b/serenity-app/codecov.yml
@@ -14,5 +14,8 @@ ignore:
   - **/injection/**/*.class
   - **/*MemberInject.*
   - **/*$$Factory*.*
+  - **/*..State*.*
+  - **/*_ViewBinding*.*
+
 
 
