Issue #413 Adds button to Manually Enter Server Location
Adds the ability to manually enter the server location, port, and type.
Also will add a Preferred Server button based on the saved settings.

--- a/serenity-app/src/main/AndroidManifest.xml
+++ b/serenity-app/src/main/AndroidManifest.xml
@@ -163,6 +163,9 @@
         android:name=".ui.preferences.LeanbackSettingsActivity"
         android:theme="@style/LeanbackPreferences"/>
 
+    <activity android:name=".ui.activity.manualentry.ManualServerActivity"
+      android:theme="@style/LeanbackPreferences"/>
+
     <activity android:name=".ui.activity.OverscanSetupActivity"/>
 
     <service android:name=".core.services.MovieSearchIntentService"/>
