--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -57,8 +57,8 @@ allOpen {
 
 android {
   defaultConfig {
-    versionCode 2000013
-    versionName "2.0.3"
+    versionCode 2010000
+    versionName "2.1.0-M1"
 
     minSdkVersion 21
     targetSdkVersion 28
