--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 buildscript {
 
   ext {
-    kotlinVersion = "1.2.70"
+    kotlinVersion = "1.3.11"
+    androidPluginVersion = "3.3.0"
   }
 
   repositories {
@@ -16,7 +17,7 @@ buildscript {
   dependencies {
     classpath 'com.google.gms:google-services:4.2.0'
     classpath 'io.fabric.tools:gradle:1.26.1'
-    classpath 'com.android.tools.build:gradle:3.1.4'
+    classpath "com.android.tools.build:gradle:$androidPluginVersion"
     classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
     classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
@@ -40,7 +41,7 @@ dependencies {
 
 project.ext {
   okhttpVersion = "3.8.1"
-  kotlinVersion = "1.2.70"
+  kotlinVersion = "1.3.11"
   androidPriorityJobQueueVersion = "2.0.1"
   daggerVersion = "1.2.5"
   eventBus = "3.1.1"
@@ -53,7 +54,7 @@ project.ext {
   moxyVersion = "1.5.3"
   glideVersion = "3.8.0"
   googleAnalyticsVersion = "16.0.4"
-  androidSupportLibVersion = "27.1.1"
+  androidSupportLibVersion = "28.0.0"
   universalCharDetVersion = "1.0.3"
   volleyVersion = "1.0.16"
   butterKnifeVersion = "8.8.1"
@@ -70,5 +71,5 @@ project.ext {
   assertJAndroidVersion = "1.1.1"
   commonsioVersion = "2.6"
   jacocoVersion = "0.8.2"
-  toothPickVersion = "1.1.1"
+  toothPickVersion = "1.1.3"
 }
