--- a/emby-lib/build.gradle
+++ b/emby-lib/build.gradle
@@ -6,7 +6,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.11"
   }
 }
 
@@ -40,7 +40,6 @@ android {
   }
 
   compileSdkVersion 28
-  buildToolsVersion '28.0.2'
 
   sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
