--- a/serenity-android-common/build.gradle
+++ b/serenity-android-common/build.gradle
@@ -7,7 +7,7 @@ buildscript {
   }
 
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.11"
   }
 
 }
@@ -28,7 +28,6 @@ kapt {
 
 android {
   compileSdkVersion 28
-  buildToolsVersion '28.0.2'
 
   defaultConfig {
     minSdkVersion 21
