--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
   }
   dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
+    classpath "org.jetbrains.kotlin:kotlin-allopen:1.3.11"
     classpath "org.jacoco:org.jacoco.core:0.8.2"
   }
 }
@@ -84,7 +84,6 @@ android {
   }
 
   compileSdkVersion 28
-  buildToolsVersion '28.0.2'
 
   if (project.hasProperty("keystore")) {
     signingConfigs {
@@ -164,7 +163,7 @@ dependencies {
   implementation project(':serenity-common')
 
   implementation 'com.google.firebase:firebase-core:16.0.6'
-  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.7'
+  implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
 
   implementation group: 'com.github.bumptech.glide', name: 'okhttp3-integration', version: "$glideOkHttpVersion"
   implementation("com.google.android.exoplayer:exoplayer-core:$exoplayerVersion") {
