Upgrade out of date libraries

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,5 @@ kotlin.incremental=true
 android.enableD8=true
 org.gradle.configureondemand=false
 android.enableUnitTestBinaryResources=true
+android.enableSeparateAnnotationProcessing=true
+
