--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -158,11 +158,11 @@ afterEvaluate {
 
 dependencies {
 
-  implementation project(':plexapp-rest-library')
-  implementation project(':subtitle-converter')
-  implementation project(':emby-lib')
-  implementation project(':serenity-android-common')
-  implementation project(':serenity-common')
+  api project(':plexapp-rest-library')
+  api project(':subtitle-converter')
+  api project(':emby-lib')
+  api project(':serenity-android-common')
+  api project(':serenity-common')
 
   implementation 'com.google.firebase:firebase-core:16.0.6'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8'
