Include kotlin in code coverage reporting

--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -44,7 +44,7 @@ sonarqube {
     property "sonar.host.url", "https://sonarcloud.io"
     property "sonar.organization", "kingargyle-github"
     property "sonar.login", "cb7af08f0b0e86306ac5365074326dc27aba503e"
-    property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/testDebugUnitTest.exec"
+    property "sonar.jacoco.xmlReportPath", "${project.buildDir}/reports/jacoco/jacocoTestReport/jacocoTestReport.xml"
     property "sonar.coverage.exclusions", "**/R.class, **/R$*.class, **/BuildConfig.*, **/Manifest*.*, **/*Test*.*,android/**/*.*, **/*MemberInjector.*, **/*$$Factory*.*, **/*..State*.*, **/*_ViewBinding*.*"
   }
 }
