Rework unit tests to improve execution speed

--- a/serenity-app/src/test/resources/us/nineworlds/serenity/robolectric.properties
+++ b/serenity-app/src/test/resources/us/nineworlds/serenity/robolectric.properties
@@ -1,4 +1,5 @@
 sdk=28
 qualifiers=large
 shadows=us.nineworlds.serenity.test.shadows.DoNothingShadowSQLiteConnection
-application = us.nineworlds.serenity.TestSerenityApplication
+#application = us.nineworlds.serenity.TestSerenityApplication
+application = us.nineworlds.serenity.TestNoOpApplication
