--- a/serenity-app/build.gradle
+++ b/serenity-app/build.gradle
@@ -55,8 +55,8 @@ allOpen {
 
 android {
   defaultConfig {
-    versionCode 2010000
-    versionName "2.1.0-M2"
+    versionCode 2000017
+    versionName "2.0.7"
 
     minSdkVersion 21
     targetSdkVersion 28
